@@ -1,3 +1,8 @@
+2009-07-28  Mike Sperber  <mike@xemacs.org>
+
+	* startup.el (startup-setup-paths): Print a few more variables
+	upon --debug-paths.
+
 2009-07-18  Aidan Kehoe  <kehoea@parhasard.net>
 
 	* files.el (find-file-create-switch-thunk): 
